--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     dependencies {
-
+        compile 'com.android.support:design:23.1.0'
         compile "com.android.support:support-v4:23.2.0"
     }
 
