--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
         <activity
             android:name=".NadgetMain"
             android:label="@string/app_name">
@@ -22,7 +23,8 @@
         <activity
             android:name=".PostView"
             android:label="@string/title_activity_post_view"
-            android:parentActivityName=".NadgetMain">
+            android:parentActivityName=".NadgetMain"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="in.pleb.nadget.NadgetMain" />
@@ -30,14 +32,16 @@
         <activity
             android:name=".NadgetSettings"
             android:label="@string/title_activity_nadget_settings"
-            android:parentActivityName=".NadgetMain">
+            android:parentActivityName=".NadgetMain"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="in.pleb.nadget.NadgetMain" />
         </activity>
         <activity android:name=".FeedSelector"
             android:label="@string/title_activity_feed_selector"
-            android:parentActivityName=".NadgetMain">
+            android:parentActivityName=".NadgetMain"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="in.pleb.nadget.NadgetMain" />
