Added Dropbox integration and minor fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,10 +55,10 @@
         <activity
             android:name=".SuggestFeeds"
             android:label="@string/title_activity_suggest_feed"
-            android:parentActivityName=".NadgetSettings">
+            android:parentActivityName=".NadgetMain">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="in.pleb.nadget.NadgetSettings" />
+                android:value="in.pleb.nadget.NadgetMain" />
         </activity>
         <activity
             android:name=".AboutNadget"
@@ -75,6 +75,20 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="in.pleb.nadget.NadgetSettings" />
+        </activity>
+
+        <activity
+            android:name="com.dropbox.client2.android.AuthActivity"
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="orientation|keyboard">
+            <intent-filter>
+                <!-- Change this to be db- followed by your app key -->
+                <data android:scheme="db-gmxms24fwnzvnub" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
     </application>
