--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <receiver android:name="in.pleb.nadget.NotificationReceiver" />
+
         <activity
             android:name=".NadgetMain"
             android:label="@string/app_name">
